# gc-alexandria

./: .env  .env.development  .env.example  .env.local  .gitignore  .onedev-buildspec.yml  CLAUDE.md  Dockerfile  Dockerfile.dev  Dockerfile.local  Dockerfile.next  Dockerfile.prod  HIERARCHY_VISUALIZATION_PLAN.md  README.md  TECHNIQUE-create-test-highlights.md  TEST_SUMMARY.md  WIKI_TAG_SPEC.md  check-publication-structure.js  code-review.md  create-test-comments.js  create-test-highlights.js  deno.json  docker-compose.yaml  implementation-plan.md  implementation-summary.md  import_map.json  maintainers.yaml  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts
cfg/: alex_config.yaml  relayConfig.json  relay_config.yaml
doc/: blossom_support.md  compose_tree.md  settings_panel.org
doc/abcdocs/: README.md  (+1 more)
docs/: event-types-panel-redesign.org
lib/relay_selector/: .gitignore  Cargo.toml  deno.json
lib/relay_selector/src/: config.rs  lib.rs  relay_selector.rs  weights.rs
lib/relay_selector/src/database/: mod.rs  operations.rs  schema.rs
lib/relay_selector/src/relay/: handle.rs  mod.rs  relay.rs  relay_variant.rs  statistics.rs  variant.rs
lib/relay_selector/src/relay_selector/: defaults.rs  mod.rs  selector.rs  weighted_sort.rs  weights.rs
nips/: 09.md
scripts/: a-ui.manifest.json  scaffold.ts
src/: app.css  app.d.ts  app.html  global.d.ts  theme-tokens.css
test_data/: LaTeXtestfile.json  LaTeXtestfile.md  latex_markdown.md
tests/: zettel-publisher-tdd.test.ts
(+471 files in other folders)
