[package]
name = "relay_selector"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3"
serde = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dependencies.futures]
version = "0.3"
features = ["executor"]

[dependencies.indexed_db_futures]
version = "0.6"
features = ["cursors", "serde", "streams"]

[dependencies.web-sys]
version = "0.3"
features = ["Worker"]
